--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,11 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>%sveltekit.body%</div>
+
+		<style>
+			body {
+				margin: 0;
+			}
+		</style>
 	</body>
 </html>
